--- a/css/style.css
+++ b/css/style.css
@@ -968,9 +968,10 @@
 
 		#banner h2 {
 			color: #ffffff;
-			font-size: 3em;
+			font-size: 4em;
+			font-weight: bold;
 			line-height: 1em;
-			margin: 0 0 0.5em 0;
+			margin: 0 0 2.5em 0;
 			padding: 0;
 		}
 
