--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@
 	}
 
 	label {
-		color: #666;
+		color: #fff;
 		display: block;
 		font-size: 0.9em;
 		font-weight: 400;
@@ -216,16 +216,16 @@
 		-o-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(144, 144, 144, 0.075);
+		background: rgba(200, 200, 200, 0.475);
 		border-radius: 4px;
 		border: none;
-		border: solid 1px rgba(144, 144, 144, 0.25);
+		border: solid 2px rgba(210, 210, 210, 0.25);
 		color: inherit;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
 		text-decoration: none;
-		width: 100%;
+    display: inline;
 	}
 
 		input[type="text"]:invalid,
@@ -241,7 +241,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4dac71;
+			border-color: #ccc;
 			box-shadow: 0 0 0 1px #4dac71;
 		}
 
@@ -725,7 +725,7 @@
 		-o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #3ba666;
+		background-color: rgba(127,	222,	163	, 0.375);
 		border-radius: 4px;
 		border: 0;
 		color: #ffffff !important;
@@ -962,7 +962,7 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		color: #ffffff;
-		padding: 16em 0em 14em;
+		padding: 8em 0em 12em;
 		text-align: center;
 	}
 
