--- a/css/style.css
+++ b/css/style.css
@@ -978,12 +978,12 @@
 			padding: 0;
 		}
 
-		#banner p {
+		#banner p, #one p {
 			font-size: 1.5em;
 			margin: .5em 0 .5em 0;
 		}
 
-		#banner div {
+		#banner div, #one div {
 			margin-bottom: 2em;
 		}
 
@@ -1004,7 +1004,7 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 6em 0em 4em;
+		padding: 4em 0em 4em;
 	}
 
 		.wrapper.style1 {
@@ -1030,14 +1030,6 @@
 				margin-bottom: 0.5em;
 			}
 
-		.wrapper.style2 .title, .wrapper.style2 header {
-			border-bottom: medium double rgba(144, 144, 144, 0.25);
-			padding-bottom: 1em;
-		}
-
-		.wrapper.style2 header {
-			margin-bottom: 4em;
-		}
 
 		.wrapper.style2 .feature {
 			margin: 0 0 2em 0;
