--- a/css/style.css
+++ b/css/style.css
@@ -960,21 +960,21 @@
 /* Banner */
 
 	#banner {
-		background: url("images/overlay.png"), url("../images/banner.jpg");
+		background: url("../images/banner.jpg");
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
-		color: #ffffff;
-		padding: 8em 0em 4em;
+		color: #535163;
+		padding: 10em 0em 10em;
 		text-align: center;
 	}
 
 		#banner h2 {
-			color: #ffffff;
+			color: #535163;
 			font-size: 4em;
 			font-weight: bold;
 			line-height: 1em;
-			margin: 0 0 1.5em 0;
+			margin: 0 0 1em 0;
 			padding: 0;
 		}
 
@@ -992,13 +992,15 @@
 		}
 
 		#banner .button {
+			color:#535163!important;
 			background-color: transparent;
-			border: 1px solid #ffffff;
-			font-weight: 300;
+			border: 1px solid #535163;
+			font-weight: 700;
 		}
 
 			#banner .button:hover {
-				background-color: rgba(255, 255, 255, 0.2);
+				background-color: #535163;
+				color:#ffffff!important;
 			}
 
 #two {
@@ -1013,11 +1015,6 @@
 
 		.wrapper.style1 {
 			background-color: #3ba666;
-			-moz-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-			-webkit-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-			-o-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-			-ms-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-			background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
 			color: #ffffff;
 		}
 
