--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -62,7 +62,7 @@ $color-bg-gray:               #f9f9f9;
 $font-family-base:            "Lato", sans-serif;
 $font-family-title:           "Slabo 27px", sans-serif;
 
-$font-size-base:              1.0375rem;
+$font-size-base:              0.9375rem;
 
 $font-weight-base:            300;
 $line-height-base:            1.5;
@@ -110,4 +110,7 @@ h6 {
 }
 .bg-ledgy {
   background-image: linear-gradient(135deg, #20a8d8 0%, #00afc9 100%);
+}
+.partner {
+  text-align: left !important;
 }
