--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -7,6 +7,11 @@
   }
 }
 
+p > a {
+  border-bottom: 1px solid $color-primary;
+  padding-bottom: 1px;
+}
+
 .text-white p {
   color: $gray-100;
 }
