change body font

--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -6,7 +6,7 @@
 // the following variables.
 
 // Google fonts
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,600,700|Slabo+27px:200,400,500,600');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,700|Slabo+27px:200,400,500,600');
 
 
 //
@@ -59,7 +59,7 @@ $color-bg-gray:               #f9f9f9;
 //
 $color-text:                  #495057;
 
-$font-family-base:            "Lato", sans-serif;
+$font-family-base:            "Work Sans", sans-serif;
 $font-family-title:           "Slabo 27px", sans-serif;
 
 $font-size-base:              1.0625rem;
