--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -19,7 +19,7 @@
 // @import "vendor/et-line-icon";
 @import "vendor/themify-icons";
 @import "vendor/jarallax";
-@import "vendor/slick";
+// @import "vendor/slick";
 @import "vendor/lity";
 @import "vendor/typedjs";
 
