--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -29,6 +29,10 @@ p > a {
   text-transform: none;
   font-weight: 400;
 }
+.stick .btn-outline-light {
+  color: $color-primary;
+  border-color: $color-primary;
+}
 h1, h2, h3, h4, h5, h6 {
   hyphens: auto;
 }
