add imprint to contact page (#59)
* add imprint to contact page

* Fix translation of "Contact"

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -59,3 +59,12 @@ h1, h2, h3, h4, h5, h6 {
 .signup {
   max-width: 600px;
 }
+.footer {
+  line-height: normal;
+  a {
+    margin-bottom: 0.7em;
+  }
+}
+.imprint h6 {
+  margin-bottom: 0;
+}
