--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -71,3 +71,19 @@ h1, h2, h3, h4, h5, h6 {
 .imprint h6 {
   margin-bottom: 0;
 }
+.pricing-3 {
+  h6 { height: 2rem }
+  li {
+    position: relative;
+    margin-left: 1em;
+    height: 3em;
+    line-height: 1.2;
+  }
+  li::before {
+    content: "\E64C";
+    font-family: 'themify';
+    color: $color-success;
+    position: absolute;
+    left: -1.5em;
+  }
+}
