Add logo nanochip

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -33,7 +33,7 @@ $teal:                            #20c997 !default;
 $cyan:                            #17a2b8 !default;
 
 // Context colors
-$color-primary:                   $blue !default;
+$color-primary:                   $red !default;
 $color-secondary:                 #e9ecf0 !default; //e4e7ea
 $color-success:                   $green !default;
 $color-info:                      $purple !default;
