--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -26,7 +26,7 @@ p > a {
 }
 
 .bg-ledgy {
-  background-image: linear-gradient(135deg, #20a8d8 0%, #00afc9 100%);
+  background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
 }
 .nav-link {
   font-size: 0.8em !important;
